--- a/src/CourseProjectApp/project.json
+++ b/src/CourseProjectApp/project.json
@@ -19,7 +19,9 @@
     "Microsoft.Extensions.Logging.Debug": "1.1.1",
     "Microsoft.Extensions.Options.ConfigurationExtensions": "1.1.1",
     "Microsoft.NETCore.App": "1.1.1",
-    "Microsoft.Extensions.SecretManager.Tools": "1.0.0"
+    "Microsoft.Extensions.SecretManager.Tools": "1.0.0",
+    "Microsoft.ApplicationInsights": "2.2.0",
+    "Microsoft.ApplicationInsights.AspNetCore": "2.0.0"
   },
 
   "tools": {
@@ -50,11 +52,15 @@
   "publishOptions": {
     "include": [
       "wwwroot",
-      "web.config"
+      "web.config",
+      "appsettings.json",
+      "Views"
     ]
   },
 
   "scripts": {
+    "precompile": [ "dotnet bundle" ],
+    "prepublish": [ "bower install" ],
     "postpublish": [ "dotnet publish-iis --publish-folder %publish:OutputPath% --framework %publish:FullTargetFramework%" ]
   }
 }
