--- a/src/CourseProjectApp/project.json
+++ b/src/CourseProjectApp/project.json
@@ -1,4 +1,4 @@
-﻿{
+{
   "dependencies": {
     "Microsoft.AspNetCore.Razor.Tools": {
       "version": "1.0.0-preview2-final",
@@ -24,7 +24,8 @@
     },
     "Microsoft.Extensions.SecretManager.Tools": "1.0.0",
     "Microsoft.ApplicationInsights": "2.2.0",
-    "Microsoft.ApplicationInsights.AspNetCore": "2.0.0"
+    "Microsoft.ApplicationInsights.AspNetCore": "2.0.0",
+    "Microsoft.VisualStudio.Web.BrowserLink.Loader": "14.0.0"
   },
 
   "tools": {
