--- a/ProjectApp/src/ProjectApp/appsettings.json
+++ b/ProjectApp/src/ProjectApp/appsettings.json
@@ -3,7 +3,8 @@
     "InstrumentationKey": "979b8b6d-73d1-4aa0-975a-ff690a157731"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\MSSQLLocalDB;Database=_CHANGE_ME;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Data Source=(localdb)\\ProjectsV13;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+
   },
   "Logging": {
     "IncludeScopes": false,
