--- a/ProjectApp/src/ProjectApp/appsettings.json
+++ b/ProjectApp/src/ProjectApp/appsettings.json
@@ -3,7 +3,7 @@
     "InstrumentationKey": "979b8b6d-73d1-4aa0-975a-ff690a157731"
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\ProjectsV13;Initial Catalog=master;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Data Source=(localdb)\\ProjectsV13;Initial Catalog=ProfileDb;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=True;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
 
   },
   "Logging": {
